crates/toml_edit/tests/snapshots/invalid/float/trailing-exp-minus.stderr
TOML parse error at line 1, column 27
  |
1 | trailing-exp-minus = 0.0e-
  |                           ^
invalid exponent, expected digits
